# arkade_sidecar

./: .gitignore  .prettierignore  Dockerfile  Makefile  README.md  flake.nix  package-lock.json  package.json  pyproject.toml  server.mjs
