[project]
name = "lnbits-arkade-sidecar"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
description = "Sidecar for Arkade to integrate with LNbits"
authors = [{ name = "LNbits", email = "hello@lnbits.com" }]
urls = { Homepage = "https://lnbits.com" }
dependencies = [ "lnbits>1" ]

[tool.poetry]
package-mode = false
